# sdp-core

./: CONTRIBUTING.md  README.md  changelog.md  changelog.yaml  sdp-core.cabal
src/Control/Exception/: SDP.hs
src/SDP/: Bordered.hs  Comparing.hs  Concat.hs  Estimate.hs  Finite.hs  Forceable.hs  Index.hs  Indexed.hs  IndexedM.hs  Linear.hs  LinearM.hs  Map.hs  MapM.hs  Nullable.hs  Proxy.hs  SafePrelude.hs  Sequence.hs  SequenceM.hs  Set.hs  Shape.hs  Sort.hs  SortM.hs  Tuple.hs  Unboxed.hs  ZipM.hs
src/SDP/Index/: Class.hs
src/SDP/Internal/: Utils.hs
src/SDP/SortM/: Insertion.hs  Tim.hs
src/SDP/Unboxed/: Class.hs  Utils.hs
src/Text/Read/: SDP.hs
src/Text/Show/: SDP.hs
